# rosreestr2coord

./: .editorconfig  .flake8  .gitignore  INSTALL.md  LICENSE.md  Makefile  README.md  SECURITY.md  gui.py  list_example.txt  make.bat  pyproject.toml  requirements.txt  requiremments.txt  rosreestr2coord.py  setup.py  setup_gui.py  tests.py  tox.ini  version.py
.github/workflows/: ci.yml
gui/: setup.py
gui/client/: bootstrap.config.js  bootstrap.config.less  index.html  main.js  package.json  polyfills.js  style.css  vendor.js
gui/client/app/: utils.js
gui/client/app/components/: area_types.js  page-builder.js  r2c.js
gui/client/app/services/: Mapster.js  Request.js
gui/client/assets/: msk.js  msk2wgs.js
gui/client/assets/leaflet-plugins/: TileLayer.EsriRest.js
gui/client/assets/projCode/: merc.js  tmerc.js
gui/client/config/: webpack.common.js  webpack.dev.js  webpack.prod.js
rosreestr2coord/: __init__.py  __main__.py  batch.py  console.py  export.py  logger.py  merge_tiles.py  parser.py  proxy_handling.py  utils.py  version.py
rosreestr2coord/request/: base_adapter.py  exceptions.py  helpers.py  httpx_adapter.py  proxy_handling.py  request.py  urlib_adapter.py
script/: batch.py  catalog.py  console.py  export.py  parser.py  rosreestr2coord.py  utils.py
scripts/: batch.py  catalog.py  console.py  export.py  logger.py  merge_tiles.py  parser.py  proxy_handling.py  utils.py
svg/: svg.py
tests/: catalog.json  conftest.py  test_area.py  test_area_errors.py  test_area_integration.py  tests_area.py
